fix(ui): make `pre > code` block scrollable to prevent overflow

--- a/src/resources/sass/front/_main.scss
+++ b/src/resources/sass/front/_main.scss
@@ -28,6 +28,7 @@
 
 .main-column {
   @include pc-screen() {
+    overflow-x: auto;
     padding-right: 24px;
   }
 }
