--- a/src/resources/sass/front/_post-content.scss
+++ b/src/resources/sass/front/_post-content.scss
@@ -143,8 +143,6 @@ Styles for post content converted Markdown to HTML
     font-size: 16px;
     overflow-x: scroll;
     padding: 16px 8px;
-    word-wrap: break-word;
-    white-space: pre-wrap;
 
     code {
       color: var(--black);
